<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="150dp"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp">

    <TextView
        android:id="@+id/poster_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/default_poster_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/red_viterbi" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/poster_name"
        android:text="@string/default_location"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/grey" />

    <TextView
        android:id="@+id/post_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/poster_name"
        android:layout_marginBottom="25dp"
        android:text="@string/default_post_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/post_text"
        android:layout_marginBottom="5dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/reply_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:text="@string/default_replied_count"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/grey" />

                <TextView
                    android:id="@+id/reply_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/replied_label"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/plus_button"
                    android:layout_width="@dimen/rating_button_size"
                    android:layout_height="@dimen/rating_button_size"
                    android:layout_gravity="center"
                    android:layout_marginEnd="15dp"
                    android:background="@null"
                    android:contentDescription="@string/plus_desc"
                    android:padding="@dimen/rating_button_padding"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_plus" />

                <TextView
                    android:id="@+id/rating_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/default_rating_score"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/grey" />

                <ImageButton
                    android:id="@+id/minus_button"
                    android:layout_width="@dimen/rating_button_size"
                    android:layout_height="@dimen/rating_button_size"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:background="@null"
                    android:contentDescription="@string/minus_desc"
                    android:padding="@dimen/rating_button_padding"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_minus" />

            </LinearLayout>

            <TextView
                android:id="@+id/post_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/layout_rating"
                android:gravity="end"
                android:text="@string/default_post_timestamp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/grey" />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>