<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp">

    <TextView
        android:id="@+id/poster_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="5dp"
        android:text="@string/default_poster_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/red_viterbi" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/post_text"
        android:layout_toEndOf="@+id/poster_name"
        android:paddingBottom="5dp"
        android:paddingEnd="0dp"
        android:paddingStart="10dp"
        android:text="@string/default_location"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/grey" />

    <TextView
        android:id="@+id/post_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/poster_name"
        android:layout_marginBottom="5dp"
        android:maxLines="7"
        android:ellipsize="end"
        android:text="@string/default_post_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/post_timestamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/post_text"
        android:gravity="end"
        android:text="@string/default_post_timestamp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/grey" />
</RelativeLayout>