<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <usc.cs578.trojannow.custom.CustomEditText
        android:id="@+id/email"
        android:layout_width="@dimen/editText_block_width"
        android:layout_height="40dp"
        android:layout_below="@+id/app_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/hint_email__help_password"
        android:inputType="textEmailAddress"
        android:paddingEnd="00dp"
        android:paddingStart="10dp"
        android:textCursorDrawable="@drawable/cursor_color" />

    <usc.cs578.trojannow.custom.CustomEditText
        android:id="@+id/password"
        android:layout_width="@dimen/editText_block_width"
        android:layout_height="40dp"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingEnd="00dp"
        android:paddingStart="10dp"
        android:textCursorDrawable="@drawable/cursor_color" />

    <usc.cs578.trojannow.custom.CustomEditText
        android:id="@+id/confirm_password"
        android:layout_width="@dimen/editText_block_width"
        android:layout_height="40dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:paddingEnd="00dp"
        android:paddingStart="10dp"
        android:textCursorDrawable="@drawable/cursor_color" />

    <usc.cs578.trojannow.custom.CustomEditText
        android:id="@+id/display_name"
        android:layout_width="@dimen/editText_block_width"
        android:layout_height="40dp"
        android:layout_below="@+id/confirm_password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/hint_display_name"
        android:inputType="textPersonName"
        android:paddingEnd="00dp"
        android:paddingStart="10dp"
        android:textCursorDrawable="@drawable/cursor_color" />

    <Button
        android:id="@+id/register_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="@dimen/editText_block_width"
        android:layout_height="40dp"
        android:layout_below="@+id/display_name"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_rounded_style"
        android:text="@string/register_button"
        android:onClick="doRegister"
        android:textAllCaps="false" />

</RelativeLayout>