<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/linearLayout2"
        android:layout_below="@+id/app_bar"
        android:padding="10dp">

        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="5dp"
            android:text="@string/default_name_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/red_viterbi"
            android:visibility="visible" />

        <EditText
            android:id="@+id/post_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/name_label"
            android:background="@null"
            android:hint="@string/hint_posting_text"
            android:inputType="textMultiLine"
            android:textCursorDrawable="@drawable/cursor_color" />

        <TextView
            android:id="@+id/location_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/post_text"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/prefix_location"
            android:text="@string/default_location_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="visible" />

        <TextView
            android:id="@+id/prefix_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/post_text"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/post_text"
            android:text="@string/default_prefix_location_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey"
            android:visibility="visible" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="5dp">

        <ImageButton
            android:id="@+id/name_button"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:adjustViewBounds="false"
            android:background="@null"
            android:contentDescription="@string/name_button"
            android:focusable="false"
            android:onClick="toggleName"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_name" />

        <ImageButton
            android:id="@+id/thermometer_button"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:background="@null"
            android:contentDescription="@string/thermometer_button"
            android:onClick="toggleThermometer"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_thermometer" />


        <ImageButton
            android:id="@+id/location_button"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:adjustViewBounds="false"
            android:background="@null"
            android:contentDescription="@string/location_button"
            android:focusable="false"
            android:onClick="toggleLocation"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_location" />


    </LinearLayout>

</RelativeLayout>